// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormWrapperComponent should match snapshot 1`] = `
<div>
  <form
    class="dto2form"
    data-testid="any-id-mock--testid"
    id="any-id-mock"
  >
    <div
      data-mockid="FormHeaderComponent"
    />
    <div
      class="flex-rows"
    >
      <div
        data-mockid="FormErrorComponent"
      />
      <div
        data-mockid="FormRequiredMessageComponent"
      />
      <div>
        any-children-mock
      </div>
      <div
        data-mockid="FormActionsComponent"
      />
      <div
        data-mockid="FormMentionsComponent"
      />
      <div
        data-mockid="FormErrorScrollComponent"
      />
    </div>
  </form>
</div>
`;

exports[`FormWrapperComponent should match snapshot without descriptionn, title, submit label and a disable submit button 1`] = `
<div>
  <form
    class="dto2form"
    data-testid="any-id-mock--testid"
    id="any-id-mock"
  >
    <div
      class="flex-rows"
    >
      <div
        data-mockid="FormErrorComponent"
      />
      <div
        data-mockid="FormRequiredMessageComponent"
      />
      <div>
        any-children-mock
      </div>
      <div
        data-mockid="FormActionsComponent"
      />
      <div
        data-mockid="FormErrorScrollComponent"
      />
    </div>
  </form>
</div>
`;

exports[`FormWrapperComponent should not render all fields required message 1`] = `
<div>
  <form
    class="dto2form"
    data-testid="any-id-mock--testid"
    id="any-id-mock"
  >
    <div
      class="flex-rows"
    >
      <div
        data-mockid="FormErrorComponent"
      />
      <div>
        any-children-mock
      </div>
      <div
        data-mockid="FormActionsComponent"
      />
      <div
        data-mockid="FormErrorScrollComponent"
      />
    </div>
  </form>
</div>
`;

exports[`FormWrapperComponent should not render the error message 1`] = `
<div>
  <form
    class="dto2form"
    data-testid="any-id-mock--testid"
    id="any-id-mock"
  >
    <div
      class="flex-rows"
    >
      <div>
        any-children-mock
      </div>
      <div
        data-mockid="FormActionsComponent"
      />
      <div
        data-mockid="FormErrorScrollComponent"
      />
    </div>
  </form>
</div>
`;

exports[`FormWrapperComponent should not render the error scroll component 1`] = `
<div>
  <form
    class="dto2form"
    data-testid="any-id-mock--testid"
    id="any-id-mock"
  >
    <div
      class="flex-rows"
    >
      <div>
        any-children-mock
      </div>
      <div
        data-mockid="FormActionsComponent"
      />
      <div
        data-mockid="FormErrorScrollComponent"
      />
    </div>
  </form>
</div>
`;
